--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="card-content">
         <h3>Blox Fruits</h3>
         <p>Script para mejorar tu experiencia en Blox Fruits.</p>
-        <button onclick="copyScript('loadstring(game:HttpGet(\\'https://api.luarmor.net/files/v3/loaders/7d8a2a1a9a562a403b52532e58a14065.lua\\'))()')">Copiar script</button>
+        <button onclick="copyScript(`loadstring(game:HttpGet('https://api.luarmor.net/files/v3/loaders/7d8a2a1a9a562a403b52532e58a14065.lua'))()`)">Copiar script</button>
         <button onclick="openModal('bloxModal')">Ver descripción</button>
       </div>
     </div>
@@ -210,7 +210,7 @@
       <div class="card-content">
         <h3>Steal a Brainrot</h3>
         <p>Script cargado desde rifton.top para Brainrot.</p>
-        <button onclick="copyScript('loadstring(game:HttpGet(\\'https://rifton.top/loader.lua\\'))()')">Copiar script</button>
+        <button onclick="copyScript(`loadstring(game:HttpGet('https://rifton.top/loader.lua'))()`)">Copiar script</button>
       </div>
     </div>
   </div>
@@ -234,4 +234,5 @@
         <li>Auto Chest Farm</li>
         <li>Auto Observation Farm</li>
         <li>Auto Enhancement / Aura</li>
-        <li>Auto Buy / Store Fruits</
+        <li>Auto Buy / Store Fruits</li>
+        <li>Auto Drop Fruits</li>
