--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     header {
       padding: 20px;
       text-align: center;
-      font-size: 24px;
-      font-weight: 800;
       background: #121212;
       border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+    header img {
+      height: 40px;
     }
     .hero {
       text-align: center;
@@ -177,7 +178,9 @@
   </style>
 </head>
 <body>
-  <header>You'Scripts</header>
+  <header>
+    <img src="logo.png" alt="YouScripts Logo">
+  </header>
 
   <section class="hero">
     <h1>Encuentra los mejores scripts para Roblox</h1>
