--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>You'Scripts</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
       --bg: #0f0f0f;
@@ -24,13 +25,13 @@
       color: var(--text);
     }
     header {
-      padding: 20px;
       text-align: center;
+      padding: 30px 0;
       background: #121212;
       border-bottom: 1px solid rgba(255,255,255,0.1);
     }
     header img {
-      height: 40px;
+      height: 100px;
     }
     .hero {
       text-align: center;
