--- a/index.html
+++ b/index.html
@@ -120,34 +120,26 @@
       color: var(--muted);
       font-size: 14px;
     }
-    .card button {
-      align-self: flex-start;
-      background: var(--accent);
-      color: #000;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    .script-box {
+      width: 100%;
+      min-height: 160px;
+      background: #0d0d0d;
+      color: #00ffcc;
+      border: 2px solid #00ffcc;
+      border-radius: 10px;
+      padding: 14px;
+      font-size: 14px;
+      font-family: monospace;
+      resize: none;
+      outline: none;
+      white-space: pre-wrap;
+      line-height: 1.8;
+      box-shadow: 0 0 10px rgba(0, 255, 204, 0.2);
     }
-    .card button::before {
-      content: "📋";
-    }
-    .card button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0, 255, 204, 0.3);
-    }
-    .card button:active {
-      transform: scale(0.95);
-    }
-    .badge {
+    .badge,
+    .count-badge {
       position: absolute;
       top: 12px;
-      left: 12px;
       background: var(--accent);
       color: #000;
       font-size: 12px;
@@ -155,6 +147,12 @@
       padding: 4px 10px;
       border-radius: 6px;
       box-shadow: 0 0 4px rgba(0,0,0,0.3);
+    }
+    .badge {
+      left: 12px;
+    }
+    .count-badge {
+      left: 100px;
     }
     #toast {
       position: fixed;
@@ -199,20 +197,43 @@
     <div class="grid" id="scriptGrid">
       <div class="card">
         <img src="https://tr.rbxcdn.com/180DAY-64f0a7a88d9f4d032dce64679cac0fc3/768/432/Image/png/noFilter" alt="Blox Fruits">
+        <div class="badge">Popular</div>
+        <div class="count-badge">1 script</div>
         <div class="card-content">
           <h3>Blox Fruits</h3>
-          <p>Ejecuta un script para mejorar tu experiencia en el juego Blox Fruits.</p>
-          <button onclick="copyScript('loadstring(game:HttpGet(\'https://api.luarmor.net/files/v3/loaders/7d8a2a1a9a562a403b52532e58a14065.lua\'))()')">Copiar script</button>
+          <p>Blox Fruits script actualizado.</p>
+          <textarea readonly class="script-box">
+👉 Script #1:
+loadstring(game:HttpGet('https://api.luarmor.net/files/v3/loaders/7d8a2a1a9a562a403b52532e58a14065.lua'))()
+          </textarea>
         </div>
       </div>
 
       <div class="card">
-        <div class="badge">Popular</div>
         <img src="https://tr.rbxcdn.com/180DAY-f18c22df34ec2c4032eb489d8acf7198/768/432/Image/png/noFilter" alt="Steal a Brainrot">
+        <div class="badge">Popular</div>
+        <div class="count-badge">1 script</div>
         <div class="card-content">
           <h3>Steal a Brainrot</h3>
-          <p>Script para el juego Brainrot, cargado desde rifton.top.</p>
-          <button onclick="copyScript('loadstring(game:HttpGet(\'https://rifton.top/loader.lua\'))()')">Copiar script</button>
+          <p>Steal a Brainrot script actualizado.</p>
+          <textarea readonly class="script-box">
+👉 Script #1:
+loadstring(game:HttpGet('https://rifton.top/loader.lua'))()
+          </textarea>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://tr.rbxcdn.com/180DAY-8f55edd772294f80e281dff8444cc54e/768/432/Image/png/noFilter" alt="Grow a garden">
+        <div class="badge">Popular</div>
+        <div class="count-badge">1 script</div>
+        <div class="card-content">
+          <h3>Grow a garden</h3>
+          <p>Grow a garden script actualizado.</p>
+          <textarea readonly class="script-box">
+👉 Script #1:
+loadstring(game:HttpGet('https://zaphub.xyz/Exec'))()
+          </textarea>
         </div>
       </div>
     </div>
@@ -220,35 +241,4 @@
 
   <footer>© 2025 You'Scripts — Hecho en RD 🇩🇴</footer>
 
-  <div id="toast">Script copiado al portapapeles</div>
-
-  <script>
-    function copyScript(code) {
-      const temp = document.createElement("textarea");
-      temp.value = code;
-      document.body.appendChild(temp);
-      temp.select();
-      document.execCommand("copy");
-      document.body.removeChild(temp);
-      showToast();
-    }
-
-    function showToast() {
-      const toast = document.getElementById("toast");
-      toast.style.opacity = "1";
-      setTimeout(() => {
-        toast.style.opacity = "0";
-      }, 2000);
-    }
-
-    function buscar() {
-      const term = document.getElementById("searchInput").value.toLowerCase();
-      const cards = document.querySelectorAll(".card");
-      cards.forEach(card => {
-        const title = card.querySelector("h3").textContent.toLowerCase();
-        card.style.display = title.includes(term) ? "block" : "none";
-      });
-    }
-  </script>
-</body>
-</html>
+  <div id="toast">Script copiado al portap
