--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
   <meta name="monetag" content="2a9c002ab6079f5510ae138c6c7c8e6e">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>You'Scripts</title>
@@ -176,6 +178,7 @@
       font-size: 14px;
     }
   </style>
+  <meta name="monetag" content="2a9c002ab6079f5510ae138c6c7c8e6e">
 </head>
 <body>
   <header>
