--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 
-  <meta name="monetag" content="2a9c002ab6079f5510ae138c6c7c8e6e">
+<script type='text/javascript' src='//pl27659128.revenuecpmgate.com/e6/90/70/e69070faacf1d845ad1a6e05d0d4e1c1.js'></script>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
