--- a/index.html
+++ b/index.html
@@ -435,3 +435,4 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/rayparams/criminality
     </textarea>
   </div>
 </div>
+<script type='text/javascript' src='//adjoinartistic.com/86/a6/25/86a625cc1c1002fceb21ec8a893e7ccb.js'></script>
