--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
       font-size: 14px;
     }
   </style>
-  <meta name="monetag" content="2a9c002ab6079f5510ae138c6c7c8e6e">
 </head>
 <body>
   <header>
@@ -338,6 +337,21 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/raygull3d/99-Nights-i
   </div>
 </div>
 
+<!-- Banner Adsterra 300x250 -->
+<div style="text-align:center; margin: 20px 0;">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'b1d31a36eb576f6b66c26c839056797e',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
+</div>
+
+
 <div class="card">
   <img src="https://tr.rbxcdn.com/180DAY-600081d81c133f2c6dc8bb52522f2845/768/432/Image/png/noFilter" alt="Fisch Simulator">
   <div class="badge">Verificado</div>
@@ -394,6 +408,21 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/zaid7086/Forsaken-Scr
   </div>
 </div>
 
+<!-- Banner Adsterra 300x250 -->
+<div style="text-align:center; margin: 20px 0;">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'b1d31a36eb576f6b66c26c839056797e',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
+</div>
+
+
 <div class="card">
   <img src="https://tr.rbxcdn.com/180DAY-ccd8bcf9f66dc37834534d2cb3cfd1b9/768/432/Image/png/noFilter" alt="The Strongest Battlegrounds">
   <div class="badge">Popular</div>
@@ -436,3 +465,17 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/rayparams/criminality
   </div>
 </div>
 <script type='text/javascript' src='//adjoinartistic.com/86/a6/25/86a625cc1c1002fceb21ec8a893e7ccb.js'></script>
+
+<!-- Banner Adsterra 300x250 -->
+<div style="text-align:center; margin: 20px 0;">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'b1d31a36eb576f6b66c26c839056797e',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
+</div>
