--- a/index.html
+++ b/index.html
@@ -323,20 +323,6 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/hackerDashDash/PetSim
   </div>
 </div>
 
-<div class="card">
-  <img src="https://tr.rbxcdn.com/180DAY-821d9599ac5c3ebe3ade368489c06110/768/432/Image/png/noFilter" alt="99 Noches en el Bosque">
-  <div class="badge">Popular</div>
-  <div class="count-badge">1 script</div>
-  <div class="card-content">
-    <h3>99 Noches en el Bosque</h3>
-    <p>Script con ESP, teleport y auto farm.</p>
-    <textarea readonly class="script-box">
-👉 Script #1:
-loadstring(game:HttpGet("https://raw.githubusercontent.com/raygull3d/99-Nights-in-the-Forest-Script/refs/heads/main/99%20Days%20Scirpt%20By%20Raygull.lua"))()
-    </textarea>
-  </div>
-</div>
-
 <!-- Banner Adsterra 300x250 -->
 <div style="text-align:center; margin: 20px 0;">
   <script type="text/javascript">
@@ -351,6 +337,20 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/raygull3d/99-Nights-i
   <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
 </div>
 
+
+<div class="card">
+  <img src="https://tr.rbxcdn.com/180DAY-821d9599ac5c3ebe3ade368489c06110/768/432/Image/png/noFilter" alt="99 Noches en el Bosque">
+  <div class="badge">Popular</div>
+  <div class="count-badge">1 script</div>
+  <div class="card-content">
+    <h3>99 Noches en el Bosque</h3>
+    <p>Script con ESP, teleport y auto farm.</p>
+    <textarea readonly class="script-box">
+👉 Script #1:
+loadstring(game:HttpGet("https://raw.githubusercontent.com/raygull3d/99-Nights-in-the-Forest-Script/refs/heads/main/99%20Days%20Scirpt%20By%20Raygull.lua"))()
+    </textarea>
+  </div>
+</div>
 
 <div class="card">
   <img src="https://tr.rbxcdn.com/180DAY-600081d81c133f2c6dc8bb52522f2845/768/432/Image/png/noFilter" alt="Fisch Simulator">
@@ -380,6 +380,21 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/Athergaming/Roblox-Mu
   </div>
 </div>
 
+<!-- Banner Adsterra 300x250 -->
+<div style="text-align:center; margin: 20px 0;">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'b1d31a36eb576f6b66c26c839056797e',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
+</div>
+
+
 <div class="card">
   <img src="https://tr.rbxcdn.com/180DAY-eb783deba3b661ff753ab9be4089188d/768/432/Image/png/noFilter" alt="Rivals">
   <div class="badge">Verificado</div>
@@ -408,6 +423,20 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/zaid7086/Forsaken-Scr
   </div>
 </div>
 
+<div class="card">
+  <img src="https://tr.rbxcdn.com/180DAY-ccd8bcf9f66dc37834534d2cb3cfd1b9/768/432/Image/png/noFilter" alt="The Strongest Battlegrounds">
+  <div class="badge">Popular</div>
+  <div class="count-badge">1 script</div>
+  <div class="card-content">
+    <h3>The Strongest Battlegrounds</h3>
+    <p>Script con auto combo, ESP, teleport y sin cooldowns.</p>
+    <textarea readonly class="script-box">
+👉 Script #1:
+loadstring(game:HttpGet("https://raw.githubusercontent.com/LOLking123456/Strongest/main/Battlegrounds77"))()
+    </textarea>
+  </div>
+</div>
+
 <!-- Banner Adsterra 300x250 -->
 <div style="text-align:center; margin: 20px 0;">
   <script type="text/javascript">
@@ -422,20 +451,6 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/zaid7086/Forsaken-Scr
   <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
 </div>
 
-
-<div class="card">
-  <img src="https://tr.rbxcdn.com/180DAY-ccd8bcf9f66dc37834534d2cb3cfd1b9/768/432/Image/png/noFilter" alt="The Strongest Battlegrounds">
-  <div class="badge">Popular</div>
-  <div class="count-badge">1 script</div>
-  <div class="card-content">
-    <h3>The Strongest Battlegrounds</h3>
-    <p>Script con auto combo, ESP, teleport y sin cooldowns.</p>
-    <textarea readonly class="script-box">
-👉 Script #1:
-loadstring(game:HttpGet("https://raw.githubusercontent.com/LOLking123456/Strongest/main/Battlegrounds77"))()
-    </textarea>
-  </div>
-</div>
 
 <div class="card">
   <img src="https://tr.rbxcdn.com/180DAY-3c69710523b585b62f53aa0d4c6c32ed/768/432/Image/png/noFilter" alt="Prison Life Admin">
@@ -465,6 +480,20 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/rayparams/criminality
   </div>
 </div>
 <script type='text/javascript' src='//adjoinartistic.com/86/a6/25/86a625cc1c1002fceb21ec8a893e7ccb.js'></script>
+
+<!-- Banner Adsterra 300x250 -->
+<div style="text-align:center; margin: 20px 0;">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'b1d31a36eb576f6b66c26c839056797e',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//adjoinartistic.com/b1d31a36eb576f6b66c26c839056797e/invoke.js"></script>
+</div>
 
 <!-- Banner Adsterra 300x250 -->
 <div style="text-align:center; margin: 20px 0;">
