--- a/index.html
+++ b/index.html
@@ -230,6 +230,46 @@
   color: #000;
 }
 
+.card {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.6s ease forwards;
+}
+
+.card:nth-child(1) { animation-delay: 0.1s; }
+.card:nth-child(2) { animation-delay: 0.2s; }
+.card:nth-child(3) { animation-delay: 0.3s; }
+/* Puedes seguir agregando más delays si quieres que entren escalonadas */
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.card {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.card.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.card {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.card.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
   </style>
 </head>
 <body>
@@ -569,6 +609,40 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/rayparams/criminality
       });
     });
   });
+</script>
+
+<script>
+  function revealOnScroll() {
+    const cards = document.querySelectorAll('.card');
+    const triggerBottom = window.innerHeight * 0.9;
+
+    cards.forEach(card => {
+      const boxTop = card.getBoundingClientRect().top;
+      if (boxTop < triggerBottom) {
+        card.classList.add('visible');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', revealOnScroll);
+  window.addEventListener('DOMContentLoaded', revealOnScroll);
+</script>
+
+<script>
+  function revealOnScroll() {
+    const cards = document.querySelectorAll('.card');
+    const triggerBottom = window.innerHeight * 0.9;
+
+    cards.forEach(card => {
+      const boxTop = card.getBoundingClientRect().top;
+      if (boxTop < triggerBottom) {
+        card.classList.add('visible');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', revealOnScroll);
+  window.addEventListener('DOMContentLoaded', revealOnScroll);
 </script>
 
 </body>
